--- a/settings.gradle
+++ b/settings.gradle
@@ -12,5 +12,5 @@ dependencyResolutionManagement {
         mavenCentral()
     }
 }
-rootProject.name = "StressDataCollector"
+rootProject.name = "stress-android-wearos"
 include ':app'
