--- a/app/build.gradle
+++ b/app/build.gradle
@@ -85,4 +85,5 @@ dependencies {
 
     // location
     implementation "com.google.android.gms:play-services-location:21.0.1"
+    implementation 'androidx.localbroadcastmanager:localbroadcastmanager:1.1.0'
 }
