--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission
         android:name="android.permission.POST_NOTIFICATIONS"
         tools:node="remove" />
-    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.FOREGROUND_SERVICE" />
     <uses-permission android:name="android.permission.READ_CALENDAR" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
@@ -14,8 +13,10 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.READ_CALL_LOG" />
     <uses-permission android:name="android.permission.READ_PHONE_STATE" />
-    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
     <uses-permission android:name="android.permission.RECORD_AUDIO" />
+
+    <uses-permission android:name="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
+    <uses-permission android:name="android.permission.ACTIVITY_RECOGNITION" />
 
     <application
         android:name=".AndroidApplication"
@@ -46,15 +47,9 @@
             android:name="firebase_analytics_collection_enabled"
             android:value="false" />
 
-        <receiver
-            android:name=".receivers.DetectedActivityReceiver"
-            android:enabled="true"
-            android:exported="true"
-            android:permission="com.google.android.gms.permission.ACTIVITY_RECOGNITION" />
-        <receiver
-            android:name=".receivers.ScreenStateReceiver"
-            android:enabled="true"
-            android:exported="false" />
+        <receiver android:name=".receivers.ActivityTransitionReceiver" />
+        <receiver android:name=".receivers.ActivityRecognitionReceiver" />
+        <receiver android:name=".receivers.ScreenStateReceiver" />
 
         <service
             android:name=".services.MyFirebaseMessagingService"
