--- a/app/build.gradle
+++ b/app/build.gradle
@@ -75,7 +75,6 @@ dependencies {
     // room
     def room_version = "2.4.3"
     implementation "androidx.room:room-runtime:$room_version"
-    annotationProcessor "androidx.room:room-compiler:$room_version"
     kapt "androidx.room:room-compiler:$room_version"
 
     // firebase
@@ -85,4 +84,13 @@ dependencies {
 
     // location
     implementation "com.google.android.gms:play-services-location:21.0.1"
+
+    // hilt
+    implementation "com.google.dagger:hilt-android:2.44"
+    kapt "com.google.dagger:hilt-compiler:2.44"
+}
+
+// Allow references to generated code
+kapt {
+    correctErrorTypes true
 }
