--- a/app/build.gradle
+++ b/app/build.gradle
@@ -4,6 +4,7 @@ plugins {
     id 'kotlin-parcelize'
     id 'kotlin-kapt'
     id 'com.google.gms.google-services'
+    id 'com.google.dagger.hilt.android'
 }
 
 android {
@@ -39,7 +40,13 @@ android {
     kotlinOptions {
         jvmTarget = '1.8'
     }
+
+    composeOptions {
+        kotlinCompilerExtensionVersion = "1.3.2"
+    }
+
     buildFeatures {
+        compose true
         viewBinding true
     }
 }
@@ -88,6 +95,25 @@ dependencies {
     // hilt
     implementation "com.google.dagger:hilt-android:2.44"
     kapt "com.google.dagger:hilt-compiler:2.44"
+
+    implementation 'androidx.compose.material3:material3:1.0.1'
+    implementation 'androidx.compose.foundation:foundation:1.3.1'
+    implementation 'androidx.compose.ui:ui:1.3.3'
+
+    implementation 'androidx.compose.ui:ui-tooling-preview:1.3.3'
+    debugImplementation 'androidx.compose.ui:ui-tooling:1.3.3'
+
+    androidTestImplementation 'androidx.compose.ui:ui-test-junit4:1.3.3'
+    debugImplementation 'androidx.compose.ui:ui-test-manifest:1.3.3'
+
+    implementation 'androidx.compose.material:material-icons-core:1.3.1'
+    implementation 'androidx.compose.material:material-icons-extended:1.3.1'
+    implementation 'androidx.compose.material3:material3-window-size-class:1.0.1'
+
+    implementation 'androidx.activity:activity-compose:1.6.1'
+    implementation 'androidx.lifecycle:lifecycle-viewmodel-compose:2.5.1'
+    implementation 'androidx.compose.runtime:runtime-livedata:1.3.3'
+
 }
 
 // Allow references to generated code
